--- a/www/css/stylesheet.css
+++ b/www/css/stylesheet.css
@@ -2,3 +2,36 @@ html { background-color:#000; }
 body { margin:0; overflow:hidden; }
 canvas { display: block; width: 100%; height: auto; }
 #content { margin: 0 auto; display: flex; flex-direction: column; justify-content: center; }
+.alertify .dialog div,
+.alertify .dialog input,
+.alertify .dialog nav button,
+.success.show,
+.error.show {
+    background-color: #6d486d;
+    color: #fff !important;
+    font-size: 24px;
+    font-family: 'Arial';
+    outline: none;
+    border: 4px solid rgba(0,0,0,0.05) !important;
+    text-transform: initial !important;
+    border-radius: 4px !important;
+    text-shadow: 2px 0 0 #333333,
+        -2px 0 0 #333333,
+        0 2px 0 #333333,
+        0 -2px 0 #333333,
+        1px 1px #333333,
+        -1px -1px 0 #333333,
+        1px -1px 0 #333333,
+        -1px 1px 0 #333333;
+}
+.alertify .dialog input {
+    margin: 0 0 12px !important;
+}
+body.pw .alertify .dialog input { -webkit-text-security: disc; }
+.alertify .dialog nav button {
+    margin: 0 0 0 12px !important;
+}
+.alertify .dialog .msg {
+    padding: 0;
+    margin: 0 0 12px !important;
+}
